# cube3d

./: .clang-format  .gitignore  CMakeLists.txt  geometry.h  main.cpp  shapes.h  utils.h
